--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
-group = 'pitheguy.schemconvert' // Replace with your actual group ID
-version = '1.1'
+group = 'pitheguy.schemconvert'
+version = '1.2'
 
 repositories {
     mavenCentral()
